helm charts update

--- a/helm/amster/templates/amster.yaml
+++ b/helm/amster/templates/amster.yaml
@@ -43,6 +43,8 @@ spec:
         envFrom:
         - configMapRef:
             name: amster-{{ .Release.Name }}
+        - configMapRef:
+            name:  {{ default "frconfig" .Values.config.name  }}
         env:
         - name: NAMESPACE
           valueFrom:
