--- a/helm/frconfig/templates/config-map.yaml
+++ b/helm/frconfig/templates/config-map.yaml
@@ -8,3 +8,7 @@ data:
   GIT_REPO: "{{ .Values.git.repo }}"
   GIT_AUTOSAVE_BRANCH:  autosave-{{ .Release.Namespace }}
   GIT_CHECKOUT_BRANCH:  {{ .Values.git.branch }}
+
+  NAMESPACE: {{ .Release.Namespace }}
+  DOMAIN: {{ default ".forgeops.com" .Values.domain }}
+
