--- a/helm/openam/templates/openam-deployment.yaml
+++ b/helm/openam/templates/openam-deployment.yaml
@@ -73,6 +73,8 @@ spec:
         envFrom:
         - configMapRef:
             name: am-configmap
+        - configMapRef:
+            name:  {{ default "frconfig" .Values.config.name  }}
         env:
         - name: NAMESPACE
           valueFrom:
