--- a/helm/openidm/templates/deployment.yaml
+++ b/helm/openidm/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         - configMapRef:
             name:  {{ default "frconfig" .Values.config.name  }}
         {{ if .Values.sedFilter }}
-        env: 
+        env:
         - name: SED_FILTER
           value: {{ .Values.sedFilter }}
         {{ end }}
@@ -48,6 +48,8 @@ spec:
         envFrom:
         - configMapRef:
             name: {{ template "fullname" . }}
+        - configMapRef:
+            name:  {{ default "frconfig" .Values.config.name  }}
         ports:
         - containerPort: 8080
         livenessProbe:
